# week

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
.github/workflows/: build.yml  release  release.yml
src/: main.rs
